# reader_study

./: .dockerignore  .gitignore  Dockerfile  README.md  create_mock_data.py  database-object-store.txt  db.dbml  export_data.py  exported_data.csv  fly.toml  insert_image_url.py  mock-skin-images.txt  pyproject.toml  pyproject_poetry.toml  recreate_db.py  requirements.txt  test.db  tmp_synonym_test.py
app/: main.py
app/api/: deps.py  routes.py
app/auth/: __init__.py  db.py  manager.py  models.py  routes.py  schemas.py
app/core/: config.py  exceptions.py
app/crud/: __init__.py  crud_ai_output.py  (+10 more)
backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: ai_prediction_header_map_ids.json
docs/: R1_Data_with_disease.csv  backend-design.md  class_mapping.txt  data_import.md  database_issue.txt  db.dbml  frontend_update.md  game_workflow.md  issue.txt  project_log.md
frontend_dist/: index.html
scripts/: add_assessment_actions_columns.py  add_country_column.py  debug_user_block.py  generate_derm_dictionary_new.py  generate_report_smoke.py  import_initial_data.py  import_r1_data.py  import_snu84.py  inspect_block_feedback_cols.py  migrate_add_cases_typical_diagnosis.py  migrate_minimal_users_assessments.py  rebuild_schema.py  recompute_block_feedback.py  reset_and_import_postgres.py  seed_basic.py  term_mapping_utils.py  test_suggest.py  try_mapping.py  upgrade_block_feedback_peer_avg.py
tests/: conftest.py  test_assessment.py  test_auth.py  test_block_finalization.py  test_case.py  test_game_assignment.py  test_reports.py  test_role.py  test_workflow.py
(+36 files in other folders)
